--- a/src/app/chh-web-components/view-comments-pop-over/view-comments-pop-over.component.html
+++ b/src/app/chh-web-components/view-comments-pop-over/view-comments-pop-over.component.html
@@ -1,1 +1,1 @@
-<ion-item lines='none' (click)="onClick()">View Comments</ion-item>
+<ion-item lines="none" (click)="onClick()">View Comments</ion-item>
