added fixes on approval

--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -225,7 +225,12 @@ ___  ___        _      _  _
   <app-chh-app-list-of-doctors
     [coDoctors]="coDoctors"
     [objecthandler]="objecthandler"
-    [isFetchDone]="isFetchDone">
+    [isFetchDone]="isFetchDone"
+    [isAP]="isAP"
+    [isTC]="isTC"
+    [iHaveTC]="iHaveTC"
+    [isVerify]="isVerify"
+    [isAPVerifyTCstatus]="isAPVerifyTCstatus">
   </app-chh-app-list-of-doctors>
 </ion-content>
 <ion-footer>
@@ -421,7 +426,12 @@ ______          _    _
         <app-chh-app-list-of-doctors
           [coDoctors]="coDoctors"
           [objecthandler]="objecthandler"
-          [isFetchDone]="isFetchDone"></app-chh-app-list-of-doctors>
+          [isFetchDone]="isFetchDone"
+          [isAP]="isAP"
+          [isTC]="isTC"
+          [iHaveTC]="iHaveTC"
+          [isVerify]="isVerify"
+          [isAPVerifyTCstatus]="isAPVerifyTCstatus"></app-chh-app-list-of-doctors>
       </ion-col>
 
       <ion-col size-lg="1" size-md="12"></ion-col>
