removed lab results

--- a/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
+++ b/src/app/pages/in-patient-patient-information/in-patient-detail/in-patient-detail.page.html
@@ -85,7 +85,7 @@ ___  ___        _      _  _
     [truncating1]="truncating1">
   </app-chh-app-admitting-diagnosis>
 
-  <!--ion-card mode="ios">
+  <ion-card mode="ios">
     <ion-list>
       <ion-item style="padding-top: 10px">
         <div class="ion-text-wrap"><b>Diagnostic Results</b><br /></div>
@@ -96,7 +96,7 @@ ___  ___        _      _  _
           name="open-outline"></ion-icon>
       </ion-item>
     </ion-list>
-  </ion-card-->
+  </ion-card>
   <resi-progress-notes></resi-progress-notes>
   <!-- progress notes -->
   <!--ion-card mode="ios" *ngIf="progNot_account_no != ''">
@@ -369,7 +369,7 @@ ______          _    _
           [admittingDiagnosis2]="admittingDiagnosis2"
           [truncating1]="truncating1">
         </app-chh-app-admitting-diagnosis>
-        <!--ion-card mode="ios">
+        <ion-card mode="ios">
           <ion-list>
             <ion-item style="padding-top: 10px">
               <div class="ion-text-wrap"><b>Diagnostic Results</b><br /></div>
@@ -380,7 +380,7 @@ ______          _    _
                 name="open-outline"></ion-icon>
             </ion-item>
           </ion-list>
-        </ion-card-->
+        </ion-card>
         <resi-progress-notes></resi-progress-notes>
 
         <app-chh-app-final-diagnosis
