--- a/src/app/pages/in-patient-patient-information/progress-notes/progress-notes.page.html
+++ b/src/app/pages/in-patient-patient-information/progress-notes/progress-notes.page.html
@@ -1,19 +1,30 @@
 <ion-header mode="md" class="ion-no-border">
   <ion-toolbar color="mango">
-    <span class="padding-left-10" routerLink="/menu/in-patients/{{patient_id}}" routerDirection="backward"
+    <span
+      class="padding-left-10"
+      routerLink="/menu/in-patients/{{patient_id}}"
+      routerDirection="backward"
       color="chh-css-primary2">
       <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
     </span>
-    <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Progress Notes </span>
+    <span class="padding-left-30 font-weight-500 font-size-20">
+      &nbsp;&nbsp;Progress Notes
+    </span>
   </ion-toolbar>
   <ion-grid class="ion-no-padding">
     <ion-row class="custom-padding">
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
-
-        <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [dischargeNotice]="dischargeNotice"
-          [forMoreOrLess]="false" [is_pwd]="is_pwd" [is_senior]="is_senior"
-          [is_philhealth_membership]="is_philhealth_membership" [patientDetailfromApi_from]="patientDetailfromApi_from"
-          [patientDetailfromApi_to]="patientDetailfromApi_to" [admission_status]="admission_status">
+        <app-chh-app-patient-header
+          [data]="data"
+          [dateAdmitted]="dateAdmitted"
+          [dischargeNotice]="dischargeNotice"
+          [forMoreOrLess]="false"
+          [is_pwd]="is_pwd"
+          [is_senior]="is_senior"
+          [is_philhealth_membership]="is_philhealth_membership"
+          [patientDetailfromApi_from]="patientDetailfromApi_from"
+          [patientDetailfromApi_to]="patientDetailfromApi_to"
+          [admission_status]="admission_status">
         </app-chh-app-patient-header>
       </ion-col>
     </ion-row>
@@ -22,30 +33,53 @@
 
 <ion-content>
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
-    <ion-refresher-content pullingIcon="chevron-down-circle-outline" pullingText="Pull to refresh"
-      refreshingSpinner="circles" refreshingText="Refreshing...">
+    <ion-refresher-content
+      pullingIcon="chevron-down-circle-outline"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
     </ion-refresher-content>
   </ion-refresher>
   <ion-grid class="ion-no-padding">
     <ion-row class="custom-padding">
-
-
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
         <ng-container>
           <div *ngFor="let x of progessNotes">
-            <ion-card class="pointer" (click)="gotoPerday(x.event_date,x.day)" *ngIf="!progressNotesIsNotReady">
+            <ion-card
+              class="pointer"
+              (click)="gotoPerday(x.event_date,x.day)"
+              *ngIf="!progressNotesIsNotReady">
               <ion-item>
                 Day #<b>{{x.day}} | {{x.dateCreateConverted}}</b>
 
                 <span *ngIf="x.date_approved != null">&nbsp;|&nbsp;</span>
-                <ion-badge *ngIf="x.date_approved != null" style="font-size:10px">{{x.date_approved}}</ion-badge>
+                <ion-badge
+                  *ngIf="x.date_approved != null"
+                  style="font-size: 10px"
+                  >{{x.date_approved}}</ion-badge
+                >
+                &nbsp;<ion-badge
+                  color="warning"
+                  *ngIf="x.status == 'FA'"
+                  style="font-size: 10px"
+                  >for approval</ion-badge
+                >
               </ion-item>
               <ion-card-content>
                 <ion-grid class="ion-no-padding ion-no-margin">
                   <ion-row>
-                    <ion-col size-md="2" size-xs="6" *ngFor="let y of x.resi_notes">
-                      <ion-text class="fontSize-12" [color]="checkNumberofNotes(y.number_of_notes)">{{y.resi_name}}
-                        <ion-icon name="checkmark-circle-outline" class="icon-center" style="padding-bottom:2px"
+                    <ion-col
+                      size-md="2"
+                      size-xs="6"
+                      *ngFor="let y of x.resi_notes">
+                      <ion-text
+                        class="fontSize-12"
+                        [color]="checkNumberofNotes(y.number_of_notes)"
+                        >{{y.resi_name}}
+                        <ion-icon
+                          name="checkmark-circle-outline"
+                          class="icon-center"
+                          style="padding-bottom: 2px"
                           *ngIf="y.number_of_notes >= 1">
                         </ion-icon>
                       </ion-text>
@@ -57,19 +91,12 @@
           </div>
         </ng-container>
 
-
-
-
-
-
-
-
         <ng-container *ngIf="progressNotesIsNotReady">
           <div class="ion-padding custom-skeleton">
             <ion-card mode="ios" class="pointer">
               <ion-item lines="none">
-                <ion-label style="margin-top: -10px;">
-                  <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                <ion-label style="margin-top: -10px">
+                  <ion-item class="ion-no-padding" style="padding-bottom: 5px">
                     <ion-skeleton-text animated></ion-skeleton-text>
                   </ion-item>
                   <ion-skeleton-text animated></ion-skeleton-text>
@@ -78,8 +105,8 @@
             </ion-card>
             <ion-card mode="ios" class="pointer">
               <ion-item lines="none">
-                <ion-label style="margin-top: -10px;">
-                  <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                <ion-label style="margin-top: -10px">
+                  <ion-item class="ion-no-padding" style="padding-bottom: 5px">
                     <ion-skeleton-text animated></ion-skeleton-text>
                   </ion-item>
                   <ion-skeleton-text animated></ion-skeleton-text>
@@ -88,8 +115,8 @@
             </ion-card>
             <ion-card mode="ios" class="pointer">
               <ion-item lines="none">
-                <ion-label style="margin-top: -10px;">
-                  <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                <ion-label style="margin-top: -10px">
+                  <ion-item class="ion-no-padding" style="padding-bottom: 5px">
                     <ion-skeleton-text animated></ion-skeleton-text>
                   </ion-item>
                   <ion-skeleton-text animated></ion-skeleton-text>
@@ -98,8 +125,8 @@
             </ion-card>
             <ion-card mode="ios" class="pointer">
               <ion-item lines="none">
-                <ion-label style="margin-top: -10px;">
-                  <ion-item class="ion-no-padding" style="padding-bottom: 5px;">
+                <ion-label style="margin-top: -10px">
+                  <ion-item class="ion-no-padding" style="padding-bottom: 5px">
                     <ion-skeleton-text animated></ion-skeleton-text>
                   </ion-item>
                   <ion-skeleton-text animated></ion-skeleton-text>
@@ -108,8 +135,6 @@
             </ion-card>
           </div>
         </ng-container>
-
-
 
         <div *ngIf="progressNotesIsEmpty">
           <ion-grid>
@@ -127,6 +152,4 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
-
 </ion-content>
