--- a/src/app/chh-web-components/progressnotes-history/progressnotes-history.component.html
+++ b/src/app/chh-web-components/progressnotes-history/progressnotes-history.component.html
@@ -58,7 +58,9 @@
     <ion-grid>
       <ion-row>
         <ion-col size="10">
-          <ion-textarea [(ngModel)]="progressNotesComment.msg"></ion-textarea>
+          <ion-textarea
+            [(ngModel)]="progressNotesComment.msg"
+            placeholder="Type Here.."></ion-textarea>
         </ion-col>
         <ion-col size="2">
           <ion-button (click)="sendComment()" *ngIf="!isLoading"
