added fix on result list

--- a/src/app/pages/in-patient-patient-information/diagnostic-results/diagnostic-results.page.html
+++ b/src/app/pages/in-patient-patient-information/diagnostic-results/diagnostic-results.page.html
@@ -151,7 +151,7 @@
                           class="ion-no-padding"
                           *ngFor="let x of resultList">
                           <ion-grid>
-                            <ion-row>
+                            <ion-row style="padding-top: 15px">
                               <ion-col size="12"
                                 ><b>{{x.exam_Description}}</b></ion-col
                               >
