--- a/src/app/pages/executuve/pages/patient-detail/patient-detail.page.html
+++ b/src/app/pages/executuve/pages/patient-detail/patient-detail.page.html
@@ -1,9 +1,10 @@
 <ion-header mode="md" class="ion-no-border">
-
-
   <ion-toolbar color="mango">
-
-    <span class="padding-left-10" (click)="closemodal()" routerDirection="backward" color="chh-css-primary2">
+    <span
+      class="padding-left-10"
+      (click)="closemodal()"
+      routerDirection="backward"
+      color="chh-css-primary2">
       <ion-icon name="arrow-back-outline" class="my-icon vcenter"></ion-icon>
       <!--ion-icon 
           name="chevron-back-outline" 
@@ -11,28 +12,55 @@
         </ion-icon-->
     </span>
 
-    <span class="padding-left-30 font-weight-500 font-size-20"> &nbsp;&nbsp;Patient Information </span>
+    <span class="padding-left-30 font-weight-500 font-size-20">
+      &nbsp;&nbsp;Patient Information
+    </span>
   </ion-toolbar>
-
 </ion-header>
 <ion-content>
-
-  <app-chh-app-patient-header [data]="data" [dateAdmitted]="dateAdmitted" [dischargeNotice]="dischargeNotice"
-    [forMoreOrLess]="true" [is_pwd]="is_pwd" [is_senior]="is_senior"
-    [patientDetailfromApi_from]="patientDetailfromApi_from" [patientDetailfromApi_to]="patientDetailfromApi_to"
+  <app-chh-app-patient-header
+    [data]="data"
+    [dateAdmitted]="dateAdmitted"
+    [dischargeNotice]="dischargeNotice"
+    [forMoreOrLess]="true"
+    [is_pwd]="is_pwd"
+    [is_senior]="is_senior"
+    [patientDetailfromApi_from]="patientDetailfromApi_from"
+    [patientDetailfromApi_to]="patientDetailfromApi_to"
     [admission_status]="admission_status">
   </app-chh-app-patient-header>
 
-
-  <app-chh-app-admitting-diagnosis [admittingDiagnosis]="admittingDiagnosis" [admittingDiagnosis1]="admittingDiagnosis1"
-    [admittingDiagnosis2]="admittingDiagnosis2" [truncating1]="truncating1">
+  <app-chh-app-admitting-diagnosis
+    [admittingDiagnosis]="admittingDiagnosis"
+    [admittingDiagnosis1]="admittingDiagnosis1"
+    [admittingDiagnosis2]="admittingDiagnosis2"
+    [truncating1]="truncating1">
   </app-chh-app-admitting-diagnosis>
-
-  <app-chh-app-final-diagnosis [data]="admissionstatus" [finalDiagnosis]="finalDiagnosis" [limit]="limit"
-    [truncating]="truncating" [finalDiagnosis1]="finalDiagnosis1" [finalDiagnosis2]="finalDiagnosis2">
+  <ion-card mode="ios">
+    <ion-list>
+      <ion-item style="padding-top: 10px">
+        <div class="ion-text-wrap"><b>Diagnostic Results</b><br /></div>
+      </ion-item>
+      <ion-item class="pointHand" lines="none" (click)="gotoDiagnistic()">
+        View Results &nbsp;<ion-icon
+          class="icon-center"
+          name="open-outline"></ion-icon>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+  <app-chh-app-final-diagnosis
+    [data]="admissionstatus"
+    [finalDiagnosis]="finalDiagnosis"
+    [limit]="limit"
+    [truncating]="truncating"
+    [finalDiagnosis1]="finalDiagnosis1"
+    [finalDiagnosis2]="finalDiagnosis2">
   </app-chh-app-final-diagnosis>
 
-  <app-chh-app-list-of-doctors [coDoctors]="coDoctors" [objecthandler]="objecthandler" [isFetchDone]="isFetchDone"
+  <app-chh-app-list-of-doctors
+    [coDoctors]="coDoctors"
+    [objecthandler]="objecthandler"
+    [isFetchDone]="isFetchDone"
     [fromExec]="true">
   </app-chh-app-list-of-doctors>
 </ion-content>
