--- a/src/app/pages/in-patient-patient-information/diagnostic-results/diagnostic-results.page.html
+++ b/src/app/pages/in-patient-patient-information/diagnostic-results/diagnostic-results.page.html
@@ -152,7 +152,10 @@
                           *ngFor="let x of resultList">
                           <ion-grid>
                             <ion-row style="padding-top: 15px">
-                              <ion-col size="12"
+                              <ion-col
+                                size="12"
+                                class="pointHand"
+                                (click)="openModalWithComponent(x)"
                                 ><b>{{x.exam_Description}}</b></ion-col
                               >
                               <ion-col size="6">{{x.exam}}</ion-col>
